
[TestVulnerabilities_MarshalJSON/multiple_vulnerabilities - 1]
[
  {
    "modified": "0001-01-01T00:00:00Z",
    "id": "GHSA-1"
  },
  {
    "modified": "0001-01-01T00:00:00Z",
    "id": "GHSA-2"
  },
  {
    "modified": "0001-01-01T00:00:00Z",
    "id": "GHSA-3"
  }
]
---

[TestVulnerabilities_MarshalJSON/nil - 1]
[]
---

[TestVulnerabilities_MarshalJSON/no_vulnerabilities - 1]
[]
---

[TestVulnerabilities_MarshalJSON/one_vulnerability - 1]
[
  {
    "modified": "0001-01-01T00:00:00Z",
    "id": "GHSA-1"
  }
]
---
